--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,10 @@
 html,
 body {
+  height: 100%;
+  width: 100%;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Segoe UI", serif;
 }
 
 a {
@@ -12,5 +13,11 @@ a {
 }
 
 * {
+  margin: 0;
+  padding:0;
   box-sizing: border-box;
+}
+
+#__next {
+  height: 100%;
 }
