--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,23 +1,35 @@
 html,
 body {
-  height: 100%;
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  font-family: "Segoe UI", serif;
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    font-family: "Segoe UI", serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 * {
-  margin: 0;
-  padding:0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 #__next {
-  height: 100%;
+    flex: 1;
+    height: inherit;
+    display: flex;
+    flex-direction: column;
+}
+
+p, span {
+    line-height: 1.15;
+}
+
+.ui-provider a {
+    background:inherit;
 }
