--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,10 @@ a {
     box-sizing: border-box;
 }
 
+*:focus, *:active {
+    outline: none !important;
+}
+
 #__next {
     flex: 1;
     height: inherit;
