--- a/components/TitleBar/title-bar.module.css
+++ b/components/TitleBar/title-bar.module.css
@@ -1,3 +1,24 @@
-.header {
+.titleBar {
+    background: purple;
+    height: 48px;
+    background: var(--brand);
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    place-items: center;
+    color: white;
 
+    .appTitle {
+        justify-self: start;
+        margin-left: 50px;
+        font-weight: bold;
+        font-size: 22px
+    }
+
+    .search {
+
+    }
+
+    .profile {
+
+    }
 }
