--- a/components/Layout/layout.module.css
+++ b/components/Layout/layout.module.css
@@ -1,15 +1,12 @@
 .layout {
     display: flex;
-    height: 100%;
-    width: 100%;
+    flex: 1;
     flex-direction: column;
 
     .menuAndContent {
         flex: 1;
         display: flex;
         flex-direction: row;
-
-
 
         .content {
             padding: 22px;
