title bar persona component converted dropdown

--- a/components/TitleBar/title-bar.module.css
+++ b/components/TitleBar/title-bar.module.css
@@ -52,5 +52,18 @@
     justify-content: flex-end;
     width: 100%;
     margin-right: 75px;
+
+    .iconButton {
+        .ms-Button {
+            background: blue !important;
+        }
+        .root-77 {
+            background: none !important;
+        }
+        background: transparent !important;
+        button {
+            background: none !important;
+        }
+    }
 }
 
