listing button active class

--- a/styles/store/index.module.css
+++ b/styles/store/index.module.css
@@ -19,6 +19,12 @@
             border: none;
             cursor: pointer;
 
+            &.active {
+                svg {
+                    color: var(--brand);
+                }
+            }
+
             &:not(:last-child) {
                 border-right: 1px solid #ddd;
             }
