color palette created

--- a/components/Card/AppCard/app-card.module.css
+++ b/components/Card/AppCard/app-card.module.css
@@ -1,6 +1,6 @@
 .appCard {
     padding: 14px;
-    background: #fff;
+    background: var(--white);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 4px;
 
