--- a/components/Menu/menu.module.css
+++ b/components/Menu/menu.module.css
@@ -35,25 +35,25 @@
             height: 20px;
             width: 20px;
             margin-bottom: 3px;
-            color: var(--gray);
+            color: var(--neutral-450);
         }
 
         span {
             font-size: 13px;
             font-family: inherit;
             font-weight: 400;
-            color: var(--gray);
+            color: var(--neutral-450);
         }
 
         &:hover {
             cursor: pointer;
 
             svg {
-                color: var(--brand)
+                color: var(--brand-800)
             }
 
             span {
-                color: var(--brand);
+                color: var(--brand-800);
             }
         }
 
@@ -61,20 +61,20 @@
             border-radius: 5px;
             width: 3px;
             height: 35px;
-            background-color: var(--brand);
+            background-color: var(--brand-800);
             content: '';
         }
 
         &.active {
             margin-left: -8px;
-            border-left: 3px solid var(--brand);
+            border-left: 3px solid var(--brand-800);
 
             svg {
-                color: var(--brand)
+                color: var(--brand-800)
             }
 
             span {
-                color: var(--brand);
+                color: var(--brand-800);
                 font-weight: 600;
             }
         }
