--- a/components/SubMenu/sub-menu.module.css
+++ b/components/SubMenu/sub-menu.module.css
@@ -27,7 +27,7 @@
                 cursor: pointer;
                 height: 22px;
                 width: 22px;
-                color: var(--gray);
+                color: var(--neutral-450);
             }
         }
     }
@@ -45,7 +45,7 @@
             margin: 8px;
             padding: 5px 14px;
             border-radius: 3px;
-            background: #fff;
+            background: var(--white);
 
             svg {
                 margin-right: 9px;
@@ -93,7 +93,7 @@
                 border-top: 1px solid #E1DFDD;
 
                 span {
-                    color: var(--brand);
+                    color: var(--brand-800);
                     margin: 5px;
                 }
             }
