--- a/styles/store/index.module.css
+++ b/styles/store/index.module.css
@@ -9,7 +9,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background: #fff;
+        background: var(--white);
 
         button {
             display: flex;
@@ -21,7 +21,7 @@
 
             &.active {
                 svg {
-                    color: var(--brand);
+                    color: var(--brand-800);
                 }
             }
 
@@ -36,7 +36,7 @@
 
             &:hover {
                 svg {
-                    color: var(--brand);
+                    color: var(--brand-800);
                 }
             }
 
@@ -80,7 +80,7 @@
 
         .contentAction {
             font-weight: 600;
-            color: var(--brand);
+            color: var(--brand-800);
             font-size: 16px;
         }
     }
