--- a/components/SubMenu/sub-menu.module.css
+++ b/components/SubMenu/sub-menu.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 321px;
-    background: #F0F0F0;
+    background: var(--neutral-100);
 
     .subMenuHeader {
         display: flex;
