--- a/components/Card/AppCard/app-card.module.css
+++ b/components/Card/AppCard/app-card.module.css
@@ -1,7 +1,7 @@
 .appCard {
     padding: 14px;
-    background: var(--white);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    background: var(--card-background);
+    box-shadow: 0 2px 4px var(--card-shadow);
     border-radius: 4px;
 
     .appInfo {
@@ -18,6 +18,7 @@
 
         .information {
             p {
+                color: var(--card-title);
                 font-weight: bold;
             }
 
@@ -28,7 +29,7 @@
                 span {
                     margin-left: 10px;
                     font-size: 14px;
-                    color: #919090;
+                    color: var(--text-small);
                 }
             }
         }
@@ -44,7 +45,7 @@
             line-height: 1.35 !important;
             overflow: hidden;
             text-overflow: ellipsis;
-            color: #484644;
+            color: var(--card-content);
         }
     }
 }
