--- a/components/Loader/loader.module.css
+++ b/components/Loader/loader.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: inherit;
-    background: var(--neutral-100);
+    background: var(--loader-background);
 
     .logo {
         animation-duration: 2s;
