--- a/components/TitleBar/title-bar.module.css
+++ b/components/TitleBar/title-bar.module.css
@@ -5,7 +5,7 @@
     z-index: 111;
     background: purple;
     height: 48px;
-    background: var(--brand-800);
+    background: var(--titlebar-background);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     place-items: center;
@@ -31,16 +31,16 @@
         svg {
             margin: 0 4px;
             font-size: 18px;
-            color: var(--neutral-450);
+            color: var(--titlebar-navigation);
             cursor: pointer;
             transition: 300ms color;
 
             &:hover {
-                color: var(--white);
+                color: var(--titlebar-navigation-hover);
             }
 
             &.active {
-                color: var(--white);
+                color: var(--titlebar-navigation-active);
             }
         }
     }
@@ -52,21 +52,5 @@
     justify-content: flex-end;
     width: 100%;
     margin-right: 75px;
-
-    .iconButton {
-        .ms-Button {
-            background: blue !important;
-        }
-
-        .root-77 {
-            background: none !important;
-        }
-
-        background: transparent !important;
-
-        button {
-            background: none !important;
-        }
-    }
 }
 
