--- a/styles/store/index.module.css
+++ b/styles/store/index.module.css
@@ -8,6 +8,7 @@
 
         .contentTitle {
             h3 {
+                color: var(--app-content-title);
                 font-weight: 600;
                 font-size: 16px;
             }
@@ -15,7 +16,7 @@
 
         .contentAction {
             font-weight: 600;
-            color: var(--brand-800);
+            color: var(--app-content-action-title);
             font-size: 16px;
         }
     }
