--- a/components/Modal/Body/AppDetail/app-detail.module.css
+++ b/components/Modal/Body/AppDetail/app-detail.module.css
@@ -1,4 +1,78 @@
 .container {
-    flex: 1;
-    background: red;
+    display: flex;
+    flex-direction: column;
+
+    .header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .information {
+            display: flex;
+
+            .image {
+                height: 80px;
+                width: 80px;
+                object-fit: contain;
+            }
+
+            .nameAndCategory {
+                margin-left: 16px;
+
+                h4 {
+                    font-size: 18px;
+                    margin-bottom: 8px;
+                    font-weight: bold;
+                    color: var(--app-detail-modal-app-name-color)
+                }
+
+                p {
+                    font-weight: 300;
+                    color: var(--app-detail-modal-app-category-color)
+                }
+            }
+        }
+
+        .closeIcon {
+            align-self: flex-start;
+            justify-self: flex-end;
+            color: var(--modal-close-icon-color);
+
+            &:hover {
+                background: var(--modal-close-icon-hover-background)
+            }
+        }
+    }
+
+    .content {
+        display: flex;
+        margin-top: 32px;
+
+        .about {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            .addButtonContainer {
+
+            }
+
+            .addButton {
+                background: var(--brand-800);
+                color: var(--white);
+                width: 25vh !important;
+                border: none;
+                border-radius: 4px !important;
+                height: 32px;
+                margin: 0;
+                padding: 0;
+            }
+        }
+
+        .description {
+            flex: 2;
+        }
+
+    }
 }
