--- a/components/Modal/modal.module.css
+++ b/components/Modal/modal.module.css
@@ -28,18 +28,18 @@
 }
 
 .min50 {
-   min-width: 50%;
+   width: 50%;
 }
 
 .min60 {
-   min-width: 60%;
+   width: 60%;
 }
 
 .min70 {
-   min-width: 70%;
+   width: 70%;
 }
 
 .min80 {
-   min-width: 80%;
+   width: 80%;
 }
 
