--- a/styles/variable.css
+++ b/styles/variable.css
@@ -56,6 +56,11 @@
 
     --app-detail-modal-app-name-color: #1F1F1F;
     --app-detail-modal-app-category-color: #1F1F1F;
+    --app-detail-modal-about-header: #1F1F1F;
+    --app-detail-modal-menu-item-color: #424242;
+    --app-detail-modal-bottom-privacy-policy-text: #464775;
+    --app-detail-modal-description-header: #1F1F1F;
+    --app-detail-modal-description: #1F1F1F;
 }
 
 .dark:root {
@@ -115,4 +120,9 @@
 
     --app-detail-modal-app-name-color: #F0F0F0;
     --app-detail-modal-app-category-color: #E0E0E0;
+    --app-detail-modal-about-header: #F0F0F0;
+    --app-detail-modal-menu-item-color: #C7C7C7;
+    --app-detail-modal-bottom-privacy-policy-text: #9EA2FF;
+    --app-detail-modal-description-header: #F0F0F0;
+    --app-detail-modal-description: #E0E0E0;
 }
